objects/ssot__CareProgramGoal__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramGoalPriority__c</fullName>
        <label>Care Program Goal Priority</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramGoalStatus__c</fullName>
        <label>Care Program Goal Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Goal Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgressPercentage__c</fullName>
        <label>Progress Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726237487_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramGoal_CareProgramId_map_Ca_rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramGoal_CareProgramId_map_Ca_rel</relationshipLabel>
        <relationshipName>rel_1716726237487_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>